# Piplet

./: README.md  main.py  pyproject.toml
src/api/: main.py
src/core/: config.py
